Preventing the Profile section summary from wrapping around the picture.

--- a/project/css/style.css
+++ b/project/css/style.css
@@ -174,6 +174,7 @@ header
 
 .summary {
   width: 70%;
+  float: right;
 }
 
 
